--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Webpage links checker",
   "scripts": {
     "build": "tsc",
+    "format": "prettier --write .",
+    "format:check": "prettier . --check",
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
@@ -19,6 +21,8 @@
     "@types/node": "^20.11.19",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "dotenv": "^16.1.4",
+    "prettier": "^3.0.3"
   }
 }
